# paluda-man

./: .gitignore  Cargo.toml  deploy.sh  partitions.csv  sdkconfig.defaults
src/: main.rs
